[package]
name = "multi-arch-image-release"
version = "0.1.1"
edition = "2024"
rust-version = "1.89.0"
description = "pleme-io GitHub Action — combine N per-arch OCI manifests into a single multi-arch image tag"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/multi-arch-image-release"

[[bin]]
name = "multi-arch-image-release"
path = "src/main.rs"

[dependencies]
pleme-actions-shared = { git = "https://github.com/pleme-io/pleme-actions-shared" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[lints.clippy]
pedantic = "warn"
